Fix warnings from use of older code style